# bahasamanis

./: .gitignore  CHANGELOG.md  README.md  bahasamanis.py  bahasamanis_cli.py  bm  contoh.bm  pyproject.toml  server.py  test_output.txt
.github/workflows/: ci.yml  release.yml
bahasamanis_data/bm_standar/: csv.bm  env.bm  log.bm  uji.bm
docs/: BM_TOML.md  KEAMANAN_PLAYGROUND.md  PANDUAN_PEMULA.md  QA_RELEASE.md  ROADMAP.md  ROADMAP_PROYEK_BESAR.md  STABILITAS.md
examples/: acak_demo.bm  berkas_demo.bm  calculator.bm  csv_demo.bm  data_loop.bm  env_demo.bm  fitur_lanjutan.bm  fizzbuzz.bm  hello.bm  interop_python.bm  json_demo.bm  log_demo.bm  menu_pilihan.bm  output_demo.bm  pemula_nilai.bm  run_all_demos.bm  sintaks_pemula.bm  uji_demo.bm  use_berkas.bm  waktu_demo.bm
scripts/: run_bm.py
static/: index.html  index.html.bak
tests/: test_cli_smoke.py  test_interpreter_smoke.py  test_server_smoke.py
vscode-bahasamanis/: LICENSE  README.md  bahasamanis-language-0.1.0.vsix  language-configuration.json  package.json
vscode-bahasamanis/snippets/: bm.json
vscode-bahasamanis/syntaxes/: bm.tmLanguage.json
