[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bahasamanis"
version = "0.2.0b1"
description = "Bahasa Manis (BM): Bahasa pemrograman berbahasa Indonesia dengan interpreter, transpiler, dan playground."
readme = "README.md"
authors = [
  { name = "M. Samjaya" }
]
license = "MIT"
requires-python = ">=3.9"
keywords = ["bahasa manis", "indonesian", "language", "interpreter", "transpiler"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Natural Language :: Indonesian",
  "Topic :: Education",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
web = ["Flask>=3"]
build = ["build>=1", "twine>=5"]

[project.urls]
Homepage = "https://github.com/TheCoderScients/bahasamanis"
Repository = "https://github.com/TheCoderScients/bahasamanis"

[project.scripts]
bm = "bahasamanis_cli:main"

[tool.setuptools]
# We ship the two modules in the project root
py-modules = ["bahasamanis", "bahasamanis_cli"]

[tool.setuptools.packages.find]
include = ["bahasamanis_data*"]

[tool.setuptools.package-data]
bahasamanis_data = ["bm_standar/*.bm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
